feat(control): implement issue 48 control plane (#85)
